smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-object2.smithy
// Parse error at line 4, column 1 near `string`: Expected RPAREN
namespace com.foo
@foo('bar'
string MyString
